# WebServer

./: CMakeLists.txt  cache_functions.c  ciao.cpp  ciao.h  client  clientTCP.c  convert_img.c  doc.txt  error_functions.c  file_functions.c  functions.h  get_userAgent.h  image_functions.c  logDate2.h  log_servente  main.c  makefile  parsing.c  prova.c  readn_writen.c  readn_writen.h  server  server.c  serverTCP.c  structs.h  thread_cond_functions.c  thread_functions.c  utilsock.h
AndroidStudioProjects/Starship_Battle/app/: build.gradle
AndroidStudioProjects/Starship_Battle/app/src/androidTest/java/com/example/andrea/starship_battle/: ExampleInstrumentedTest.java
AndroidStudioProjects/Starship_Battle/app/src/main/: AndroidManifest.xml
AndroidStudioProjects/Starship_Battle/app/src/main/java/com/example/andrea/starship_battle/: MainActivity.java
AndroidStudioProjects/Starship_Battle/app/src/main/res/layout/: activity_main.xml
AndroidStudioProjects/Starship_Battle/app/src/main/res/values/: strings.xml
AndroidStudioProjects/Starship_Battle/app/src/test/java/com/example/andrea/starship_battle/: ExampleUnitTest.java
ClionProjects/WebServer/: CMakeLists.txt
